recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:6: error: not found: value list
    if(list.head==v){
       ^